[gd_scene load_steps=11 format=3 uid="uid://c3lrdtiw05qft"]

[ext_resource type="Theme" uid="uid://cyua45ur0ijqo" path="res://assets/Main.theme" id="1_460tm"]
[ext_resource type="Script" path="res://panels/AddFixture/AddFixture.gd" id="2_q8wav"]
[ext_resource type="StyleBox" uid="uid://daxhx5qr5qdeu" path="res://assets/SolidPanel.tres" id="2_v2e7d"]
[ext_resource type="StyleBox" uid="uid://csle20exwqtti" path="res://assets/PanelMenuBar.tres" id="3_oo2yy"]
[ext_resource type="Texture2D" uid="uid://dpncjre34kf25" path="res://assets/icons/Storage.svg" id="4_7nytk"]
[ext_resource type="PackedScene" uid="uid://dfu5s8fjy0ex4" path="res://components/UIPanel/EditControls.tscn" id="5_0wdyq"]
[ext_resource type="PackedScene" uid="uid://pmm0fpocy30v" path="res://components/ObjectPicker/ObjectPickerButton/ObjectPickerButton.tscn" id="7_wsfo4"]
[ext_resource type="Texture2D" uid="uid://dpj5ee27m3m18" path="res://assets/icons/DMXOutput.svg" id="8_85xv7"]

[sub_resource type="LabelSettings" id="LabelSettings_q6tac"]
font_size = 21

[sub_resource type="LabelSettings" id="LabelSettings_5nqr3"]
font_size = 15

[node name="Add Fixture" type="PanelContainer" node_paths=PackedStringArray("manufacturers_list", "fixture_list", "fixture_infomation", "select_a_fixture", "fixture_info_name", "fixture_info_manufacturer", "fixture_info_modes", "universe_options", "channel_input", "quantity_input", "offset_input", "name_input", "increment_name", "edit_controls")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_460tm")
theme_override_styles/panel = ExtResource("2_v2e7d")
script = ExtResource("2_q8wav")
manufacturers_list = NodePath("VBoxContainer/HSplitContainer/HSplitContainer/Manufacturers")
fixture_list = NodePath("VBoxContainer/HSplitContainer/HSplitContainer/Fixtures")
fixture_infomation = NodePath("VBoxContainer/HSplitContainer/PanelContainer/FixtureInfomation")
select_a_fixture = NodePath("VBoxContainer/HSplitContainer/PanelContainer/SelectAFixture")
fixture_info_name = NodePath("VBoxContainer/HSplitContainer/PanelContainer/FixtureInfomation/FixtureInfomation/PanelContainer/VBoxContainer/FixtureName")
fixture_info_manufacturer = NodePath("VBoxContainer/HSplitContainer/PanelContainer/FixtureInfomation/FixtureInfomation/PanelContainer/VBoxContainer/Manufacturer")
fixture_info_modes = NodePath("VBoxContainer/HSplitContainer/PanelContainer/FixtureInfomation/FixtureInfomation/Modes")
universe_options = NodePath("VBoxContainer/HSplitContainer/PanelContainer/FixtureInfomation/FixtureInfomation/PanelContainer2/VBoxContainer2/HBoxContainer/ObjectPickerButton")
channel_input = NodePath("VBoxContainer/HSplitContainer/PanelContainer/FixtureInfomation/FixtureInfomation/PanelContainer2/VBoxContainer2/HBoxContainer2/Channel")
quantity_input = NodePath("VBoxContainer/HSplitContainer/PanelContainer/FixtureInfomation/FixtureInfomation/PanelContainer2/VBoxContainer2/HBoxContainer3/Quantity")
offset_input = NodePath("VBoxContainer/HSplitContainer/PanelContainer/FixtureInfomation/FixtureInfomation/PanelContainer2/VBoxContainer2/HBoxContainer4/Offset")
name_input = NodePath("VBoxContainer/HSplitContainer/PanelContainer/FixtureInfomation/FixtureInfomation/PanelContainer3/VBoxContainer/HBoxContainer/LineEdit")
increment_name = NodePath("VBoxContainer/HSplitContainer/PanelContainer/FixtureInfomation/FixtureInfomation/PanelContainer3/VBoxContainer/HBoxContainer2/LineEdit2")
edit_controls = NodePath("VBoxContainer/PanelContainer2/HBoxContainer/EditControls")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/panel = ExtResource("3_oo2yy")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="PanelName" type="Button" parent="VBoxContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Add Fixtures"
icon = ExtResource("4_7nytk")
flat = true

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/PanelContainer2/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 3
vertical_scroll_mode = 3

[node name="EditControls" parent="VBoxContainer/PanelContainer2/HBoxContainer" instance=ExtResource("5_0wdyq")]
layout_mode = 2
show_edit = false
show_settings = false

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Manufacturers" type="ItemList" parent="VBoxContainer/HSplitContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Fixtures" type="ItemList" parent="VBoxContainer/HSplitContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FixtureInfomation" type="ScrollContainer" parent="VBoxContainer/HSplitContainer/PanelContainer"]
visible = false
layout_mode = 2

[node name="FixtureInfomation" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/PanelContainer/FixtureInfomation"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HSplitContainer/PanelContainer/FixtureInfomation/FixtureInfomation"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/PanelContainer/FixtureInfomation/FixtureInfomation/PanelContainer"]
layout_mode = 2

[node name="FixtureName" type="Label" parent="VBoxContainer/HSplitContainer/PanelContainer/FixtureInfomation/FixtureInfomation/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Fixture Name"
label_settings = SubResource("LabelSettings_q6tac")
text_overrun_behavior = 3

[node name="Manufacturer" type="Label" parent="VBoxContainer/HSplitContainer/PanelContainer/FixtureInfomation/FixtureInfomation/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Manufacturer"
label_settings = SubResource("LabelSettings_5nqr3")
text_overrun_behavior = 3

[node name="Modes" type="ItemList" parent="VBoxContainer/HSplitContainer/PanelContainer/FixtureInfomation/FixtureInfomation"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
item_count = 3
item_0/text = "Mode 1"
item_1/text = "Mode 2"
item_2/text = "Mode 3"

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/HSplitContainer/PanelContainer/FixtureInfomation/FixtureInfomation"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/PanelContainer/FixtureInfomation/FixtureInfomation/PanelContainer2"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/PanelContainer/FixtureInfomation/FixtureInfomation/PanelContainer2/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer/PanelContainer/FixtureInfomation/FixtureInfomation/PanelContainer2/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Universe: "

[node name="ObjectPickerButton" parent="VBoxContainer/HSplitContainer/PanelContainer/FixtureInfomation/FixtureInfomation/PanelContainer2/VBoxContainer2/HBoxContainer" instance=ExtResource("7_wsfo4")]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 10
text = "Select Universe"
icon = ExtResource("8_85xv7")

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/PanelContainer/FixtureInfomation/FixtureInfomation/PanelContainer2/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer/PanelContainer/FixtureInfomation/FixtureInfomation/PanelContainer2/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
text = "Channel: "

[node name="Channel" type="SpinBox" parent="VBoxContainer/HSplitContainer/PanelContainer/FixtureInfomation/FixtureInfomation/PanelContainer2/VBoxContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 10
min_value = 1.0
max_value = 512.0
value = 1.0

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/PanelContainer/FixtureInfomation/FixtureInfomation/PanelContainer2/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer/PanelContainer/FixtureInfomation/FixtureInfomation/PanelContainer2/VBoxContainer2/HBoxContainer3"]
layout_mode = 2
text = "Quantity: 
"

[node name="Quantity" type="SpinBox" parent="VBoxContainer/HSplitContainer/PanelContainer/FixtureInfomation/FixtureInfomation/PanelContainer2/VBoxContainer2/HBoxContainer3"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 10
min_value = 1.0
max_value = 512.0
value = 1.0

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/PanelContainer/FixtureInfomation/FixtureInfomation/PanelContainer2/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer/PanelContainer/FixtureInfomation/FixtureInfomation/PanelContainer2/VBoxContainer2/HBoxContainer4"]
layout_mode = 2
text = "Offset: "

[node name="Offset" type="SpinBox" parent="VBoxContainer/HSplitContainer/PanelContainer/FixtureInfomation/FixtureInfomation/PanelContainer2/VBoxContainer2/HBoxContainer4"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 10
max_value = 510.0

[node name="PanelContainer3" type="PanelContainer" parent="VBoxContainer/HSplitContainer/PanelContainer/FixtureInfomation/FixtureInfomation"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/PanelContainer/FixtureInfomation/FixtureInfomation/PanelContainer3"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/PanelContainer/FixtureInfomation/FixtureInfomation/PanelContainer3/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer/PanelContainer/FixtureInfomation/FixtureInfomation/PanelContainer3/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Name: "

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HSplitContainer/PanelContainer/FixtureInfomation/FixtureInfomation/PanelContainer3/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 10

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/PanelContainer/FixtureInfomation/FixtureInfomation/PanelContainer3/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer/PanelContainer/FixtureInfomation/FixtureInfomation/PanelContainer3/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Incremental: "

[node name="LineEdit2" type="CheckBox" parent="VBoxContainer/HSplitContainer/PanelContainer/FixtureInfomation/FixtureInfomation/PanelContainer3/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(150, 39)
layout_mode = 2
size_flags_horizontal = 10
button_pressed = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/PanelContainer/FixtureInfomation/FixtureInfomation"]
layout_mode = 2
size_flags_vertical = 10

[node name="Create" type="Button" parent="VBoxContainer/HSplitContainer/PanelContainer/FixtureInfomation/FixtureInfomation/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
text = "Create"

[node name="SelectAFixture" type="Label" parent="VBoxContainer/HSplitContainer/PanelContainer"]
layout_mode = 2
text = "Select a fixture 
to view infomation"
horizontal_alignment = 1

[connection signal="item_selected" from="VBoxContainer/HSplitContainer/HSplitContainer/Manufacturers" to="." method="_on_manufacturers_item_selected"]
[connection signal="item_selected" from="VBoxContainer/HSplitContainer/HSplitContainer/Fixtures" to="." method="_on_fixtures_item_selected"]
[connection signal="item_selected" from="VBoxContainer/HSplitContainer/PanelContainer/FixtureInfomation/FixtureInfomation/Modes" to="." method="_on_modes_item_selected"]
[connection signal="pressed" from="VBoxContainer/HSplitContainer/PanelContainer/FixtureInfomation/FixtureInfomation/VBoxContainer/Create" to="." method="_on_create_pressed"]
